syntax = "proto3";
import "google/protobuf/empty.proto";

service BL10Lock {
        rpc Unlock(Lock) returns (CommandSent) {}
        rpc Alarm(Lock) returns (CommandSent) {}
        rpc Locate(Lock) returns (CommandSent) {}
        rpc StatusUpdates(google.protobuf.Empty) returns (stream LockStatus);
}

message Lock {
        string imei = 1;
}

message CommandSent {
        string imei = 1;
        bool is_sent = 2;
}

message LockStatus {
        int64 timestamp = 1;
        string imei = 2;
        HeartBeatPacket heartbeat_packet = 3;
        LocationPacket location_packet = 4;
}

message HeartBeatPacket {
        bool gps_enabled = 1;
        bool is_charching = 2;
        bool is_locked = 3;
        int32 voltage = 4;
        enum SignalStrength {
                NO_SIGNAL = 0;
                VERY_WEAK_SIGNAL = 1;
                WEAK_SIGNAL = 2;
                GOOD_SIGNAL = 3;
                STRONG_SIGNAL = 4;
        }
        SignalStrength signal_strength = 5;
}

message LocationPacket {
        int64 lock_timestamp = 1;
        PositionPackage location = 2;
        enum Status {
                TIMING_REPORT = 0;
                FIXED_DISTANCE_REPORT  = 1;
                GPS_REUPLOAD = 2;
                LJDW_REPORT = 3;
                LOCK_REPORT = 4;
                UNLOCK_REPORT = 5;
                LOW_INTERNAL_BATTERY_ALARM = 6;
                LOW_BATTERY_SHUTDOWN = 7;
                ABNORMAL_ALARM = 8;
                ABNORMAL_UNLOCKING_ALARM = 9;                
        }
        Status status = 3;
        BaseStation base_station = 4;
}

message PositionPackage {
        float latitude = 1; // WGS 84
        float longitude = 2; // WGS 84
        int32 number_of_satelites = 3;
        int32 course = 4;
        float speed = 5;
}

message BaseStation {
        int32 mcc = 1;
        int32 mnc = 2;
        int32 lac = 3;
        int32 ci = 4;
        int32 rssi =5 ; 
}